--- a/templates/base.html
+++ b/templates/base.html
@@ -1385,8 +1385,8 @@
 <script src="/static/assets/plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
 <script src="/static/assets/plugins/jquery-knob/dist/jquery.knob.min.js"></script>
 <!-- ================== END PAGE LEVEL JS ================== -->
-{#{% include 'service_worker_unregister.html' %}#}
-{#<script src="/static/webpush/registerSw.js?v=3.0"></script>#}
+{% include 'service_worker_unregister.html' %}
+<script src="/static/webpush/registerSw.js?v=3.0"></script>
 {% block jscript %}
 {% endblock %}
 
