--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -95,7 +95,7 @@
                 >
 
                     <div class="spacer-single"></div>
-                     <div class="d-lg-flex justify-content-center !mt-4" style="padding-top: 0.75rem!important">
+                    <div class="d-lg-flex justify-content-center !mt-4" style="padding-top: 0.75rem!important">
                         <div class="h4 padding10"><i class="i_h3 fa fa-calendar-check-o id-color"></i><span
                                 class="text-white">March 19th to 21th 2025</span></div>
                     </div>
@@ -981,6 +981,165 @@
         </div>
     </section>
     <!-- section close -->
+
+    <section id="section-ticket" aria-label="section-services-tab"
+             data-bgimage="url(static/images/bg/2.jpg) fixed center no-repeat">
+        <div class="wm wm-border wow fadeInDown">fees</div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center wow fadeInUp">
+                    <h1>Conference Fees</h1>
+                    <div class="separator"><span><i class="fa fa-square"></i></span></div>
+                    <div class="spacer-single"></div>
+                </div>
+                <div class="container text-light">
+                    <div class="row d-flex justify-content-center align-items-stretch">
+                        <div class="col-lg-4 col-md-6 mb-4 d-flex">
+                            <div style="background: #101010!important;" class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
+                                <div class="top">
+                                    <h2>Authors</h2>
+                                    <p class="price"><span class="currency id-color">$</span> <b>300.00</b></p>
+                                </div>
+                                <div class="bottom">
+                                    <ul>
+                                        <li><i class="icon_check_alt2"></i>1 Paper</li>
+                                        <li><i class="icon_check_alt2"></i>Additional page: +$50 per page (max 2 pages)
+                                        </li>
+                                        <li><i class="icon_check_alt2"></i>Additional paper: +$200 each</li>
+                                    </ul>
+                                </div>
+{#                                <div class="ps1-deco"></div>#}
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 mb-4 d-flex">
+                            <div style="background: #101010!important;" class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
+                                <div class="top">
+                                    <h2>Attendees</h2>
+                                    <p class="price"><span class="currency id-color">$</span> <b>150.00</b></p>
+                                </div>
+                                <div class="bottom">
+                                    <!-- Empty content as per original -->
+                                </div>
+{#                                <div class="ps1-deco"></div>#}
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 mb-4 d-flex">
+                            <div style="background: #101010!important;" class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
+                                <div class="top">
+                                    <h2>Special Price for Sponsor Universities (UNEMI, VIU, or UCLM)</h2>
+                                    <p class="price"><span class="currency id-color">$</span> <b>50.00</b></p>
+                                </div>
+                                <div class="bottom">
+                                    <ul>
+                                        <li><i class="icon_check_alt2"></i>Must register using institutional email</li>
+                                        <li><i class="icon_check_alt2"></i>Attendee: $50</li>
+                                        <li><i class="icon_check_alt2"></i>Student Attendee: Free</li>
+                                    </ul>
+                                </div>
+{#                                <div class="ps1-deco"></div>#}
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 mb-4 d-flex">
+                            <div style="background: #101010!important;" class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
+                                <div class="top">
+                                    <h2>Student Attendees</h2>
+                                    <p class="price"><span class="currency id-color">$</span> <b>50.00</b></p>
+                                </div>
+                                <div class="bottom">
+                                    <ul>
+                                        <li><i class="icon_check_alt2"></i>Registration must be with institutional email
+                                        </li>
+                                    </ul>
+                                </div>
+{#                                <div class="ps1-deco"></div>#}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                {#                <div class="h-100 text-light col-lg-4 col-md-6">#}
+                {#                    <div class="pricing-s1 mb30 wow fadeInUp">#}
+                {#                        <div class="top">#}
+                {#                            <h2>Authors</h2>#}
+                {#                            <p class="price"><span class="currency id-color">$</span> <b>300.00</b></p>#}
+                {#                        </div>#}
+                {#                        <div class="bottom">#}
+                {#                            <ul>#}
+                {#                                <li><i class="icon_check_alt2"></i>1 Paper</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Additional page: +$50 per page (max 2 pages)</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Additional paper: +$200 each</li>#}
+                {#                            </ul>#}
+                {#                            <a href="#" class="btn btn-custom text-white">Buy Ticket</a>#}
+                {#                        </div>#}
+                {#                        <div class="ps1-deco"></div>#}
+                {#                    </div>#}
+                {#                </div>#}
+                {#                <div class="h-100 text-light col-lg-4 col-md-6">#}
+                {#                    <div class="h-100 pricing-s1 mb30 wow fadeInUp">#}
+                {#                        <div class="ribbon color-2 text-white">Recommend</div>#}
+                {#                        <div class="top">#}
+                {#                            <h2>Attendees</h2>#}
+                {#                            <p class="price"><span class="currency id-color">$</span> <b>150.00</b></p>#}
+                {#                        </div>#}
+                {#                        <div class="bottom">#}
+                {#                            <ul>#}
+                {#                                <li><i class="icon_check_alt2"></i>Conference Tickets</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Free Lunch Nad Coffee</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Certificates</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Private Access</li>#}
+                {#                                <li><i class="icon_close_alt2"></i>Experts Contacts</li>#}
+                {#                            </ul>#}
+                {#                            <a href="#" class="btn btn-custom text-white">Buy Ticket</a>#}
+                {#                        </div>#}
+                {#                        <div class="ps1-deco"></div>#}
+                {#                    </div>#}
+                {#                </div>#}
+                {#                <div class="h-100 text-light col-lg-4 col-md-6">#}
+                {#                    <div class="pricing-s1 mb30 wow fadeInUp">#}
+                {#                        <div class="top">#}
+                {#                            <h2>Special Price for Sponsor Universities (UNEMI, VIU, or UCLM)</h2>#}
+                {#                            <p class="price"><span class="currency id-color">*$</span> <b>50.00</b></p>#}
+                {#                        </div>#}
+                {#                        <div class="bottom">#}
+                {#                            <ul>#}
+                {#                                <li><i class="icon_check_alt2"></i>Must register using institutional email</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Attendee: $50</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Student Attendee: Free</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Free Lunch Nad Coffee</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Certificates</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Private Access</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Experts Contacts</li>#}
+                {#                            </ul>#}
+                {#                            <a href="#" class="btn btn-custom text-white">Buy Ticket</a>#}
+                {#                        </div>#}
+                {#                        <div class="ps1-deco"></div>#}
+                {#                    </div>#}
+                {#                </div>#}
+                {#                <div class="h-100 text-light col-lg-4 col-md-6">#}
+                {#                    <div class="pricing-s1 mb30 wow fadeInUp">#}
+                {#                        <div class="top">#}
+                {#                            <h2>Student Attendees</h2>#}
+                {#                            <p class="price"><span class="currency id-color">$</span> <b>50.00</b></p>#}
+                {#                        </div>#}
+                {#                        <div class="bottom">#}
+                {#                            <ul>#}
+                {#                                <li><i class="icon_check_alt2"></i>Registration must be with institutional email#}
+                {#                                </li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Private Access</li>#}
+                {#                                <li><i class="icon_check_alt2"></i>Experts Contacts</li>#}
+                {#                            </ul>#}
+                {#                            <a href="#" class="btn btn-custom text-white">Buy Ticket</a>#}
+                {#                        </div>#}
+                {#                        <div class="ps1-deco"></div>#}
+                {#                    </div>#}
+                {#                </div>#}
+            </div>
+        </div>
+    </section>
 
     <section id="section-features">
         <div class="wm wm-border wow fadeInDown ">features</div>
